--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/socket.io-client": "^3.0.0",
     "logger": "*",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
+    "socket.io-client": "^4.5.0",
     "typescript": "^4.6.4",
     "web-vitals": "^2.1.4"
   },
