--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@testing-library/react-hooks": "^8.0.0",
     "@testing-library/user-event": "^14.1.1",
     "@types/jest": "^27.5.0",
+    "@types/socket.io": "^3.0.2",
     "@types/winston": "^2.4.4",
     "esbuild": "^0.14.38",
     "esbuild-jest": "^0.5.0",
@@ -31,6 +32,7 @@
   },
   "packageManager": "yarn@1.22.18",
   "dependencies": {
-    "dotenv": "^16.0.0"
+    "dotenv": "^16.0.0",
+    "socket.io": "^4.5.0"
   }
 }
