--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -3,8 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/prop-types": "^15.7.5",
     "@types/socket.io-client": "^3.0.0",
+    "antd": "^4.20.3",
     "logger": "*",
+    "prop-types": "^15.8.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
@@ -21,7 +24,8 @@
     "config": "*",
     "eslint": "^8.14.0",
     "ts-loader": "^9.3.0",
-    "tsconfig": "*"
+    "tsconfig": "*",
+    "interfaces": "*"
   },
   "scripts": {
     "dev": "craco start",
