app: Add shard interface
Add shared interface of GameEvent to use by both services
Modify .gitlab-ci.yml to include feat/ branches

Ticket: GOL-18

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,4 +13,6 @@ sonarqube-check:
     - sonar-scanner
   allow_failure: true
   only:
-    - main # or the name of your main branch
+    - main
+    - merge_requests
+    - /^feat\/.+/
