--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/seedrandom": "^3.0.2",
     "dotenv": "^16.0.0",
     "express": "^4.18.1",
     "logger": "*",
+    "seedrandom": "^3.0.5",
     "typescript": "^4.6.4"
   },
   "devDependencies": {
@@ -18,7 +20,8 @@
     "nodemon": "^2.0.16",
     "ts-node": "^10.7.0",
     "tsconfig": "*",
-    "tslib": "^2.4.0"
+    "tslib": "^2.4.0",
+    "interfaces": "*"
   },
   "scripts": {
     "build": "npx tsc",
