frontend: Create websocket context
Create websocket context for websocket connection
Add Modal to inform about successful websocket connection
Refactor computation of board dimensions
Create method for adding listeners to websocket
Add handling of initialize board on frontend

Ticket: GOL-26, GOL-22, GOL-29

--- a/apps/frontend/tsconfig.json
+++ b/apps/frontend/tsconfig.json
@@ -3,6 +3,11 @@
   "compilerOptions": {
     "baseUrl": "."
   },
-  "include": ["src/**/*", "react-app-env.d.ts"],
+  "include": [
+    "src/**/*",
+    "react-app-env.d.ts",
+    "../../packages/interfaces/Cell.ts",
+    "../backend/src/libs/randomize-board.ts"
+  ],
   "exclude": ["node_modules"]
 }
